Acceso y manipulacion de elementos HTML desde JS

--- a/manipulacionDOM/index.html
+++ b/manipulacionDOM/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manipulacion del DOM basica - Curso Practico de Javascript</title>
 </head>
-<>
-    <h1>
-        Manipulacion del DOM basica
-    </h1>
+<body>
+    <h1>Manipulacion del DOM basica</h1>
 
+    <p>Esto es un parrafo de etiqueta</p>
+    <p class="parrafito">Esto es un parrafo con clase</p>
+    <p id="pid">Esto es un parrafo con ID</p>
 
-    <script src="./script.js"></script> <!--esta es la forma de conectar archivo js con html-->
+    <input placeholder="Escribe lo que quieras aqui">
+
+    <script src="./script.js"></script>
 </body>
 </html>
