Interaccion de texto con HTML desde JS

--- a/manipulacionDOM/index.html
+++ b/manipulacionDOM/index.html
@@ -7,7 +7,7 @@
     <title>Manipulacion del DOM basica - Curso Practico de Javascript</title>
 </head>
 <body>
-    <h1>Manipulacion del DOM basica</h1>
+    <h1 pantalla="generico">Manipulacion del DOM basica</h1>
 
     <p>Esto es un parrafo de etiqueta</p>
     <p class="parrafito">Esto es un parrafo con clase</p>
