Mostrando resultado en la misma pagina con JS y HTML

--- a/manipulacionDOM/index.html
+++ b/manipulacionDOM/index.html
@@ -12,7 +12,9 @@
     <input id="calculo1" placeholder="Escribe lo que quieras aqui">
     <input id="calculo2" placeholder="Escribe lo que quieras aqui">
     <button onclick="btnOnClick()" id="btnCalcular">Calcular</button>
-    <!--Se asigna como valor al atributo onclick una funcion de JS, una manera mas eficiente de trabajar con codigo.-->
+
+    <p id="result"></p>
+    <!--Se genera parrafo con ID resulta para mostrar en el parrafo el resultado de los valores de entrada en los inputs.-->
 
     <script src="./script.js"></script>
 </body>
