addEventListener - Mostrando resultado en la misma pagina del navegador con JS

--- a/manipulacionDOM/index.html
+++ b/manipulacionDOM/index.html
@@ -11,10 +11,9 @@
 
     <input id="calculo1" placeholder="Escribe lo que quieras aqui">
     <input id="calculo2" placeholder="Escribe lo que quieras aqui">
-    <button onclick="btnOnClick()" id="btnCalcular">Calcular</button>
+    <button id="btnCalcular">Calcular</button>
 
     <p id="result"></p>
-    <!--Se genera parrafo con ID resulta para mostrar en el parrafo el resultado de los valores de entrada en los inputs.-->
 
     <script src="./script.js"></script>
 </body>
