--- a/manipulacionDOM/index.html
+++ b/manipulacionDOM/index.html
@@ -9,11 +9,13 @@
 <body>
     <h1 >Manipulacion del DOM basica</h1>
 
-    <input id="calculo1" placeholder="Escribe lo que quieras aqui">
-    <input id="calculo2" placeholder="Escribe lo que quieras aqui">
-    <button id="btnCalcular">Calcular</button>
-
-    <p id="result"></p>
+    <form id="formulario">
+        <input id="calculo1" placeholder="Escribe lo que quieras aqui">
+        <input id="calculo2" placeholder="Escribe lo que quieras aqui">
+        <button id="btnCalcular">Calcular</button>
+    
+        <p id="result"></p>
+    </form>
 
     <script src="./script.js"></script>
 </body>
