Otra solucion al mismo escenario para prevenir comportamientos predeterminados en elementos HTML sin usar event.preventDefault

--- a/manipulacionDOM/index.html
+++ b/manipulacionDOM/index.html
@@ -12,8 +12,8 @@
     <form id="formulario">
         <input id="calculo1" placeholder="Escribe lo que quieras aqui">
         <input id="calculo2" placeholder="Escribe lo que quieras aqui">
-        <button id="btnCalcular">Calcular</button>
-    
+        <button type="button" id="btnCalcular">Calcular</button>
+    <!--La solucion para evitar que se recargue la pagina y no usar event.preventDefault en JS es asignando un atributo al elemento HTML(type="button").-->
         <p id="result"></p>
     </form>
 
