--- a/cursoPractFrontDev4/index.html
+++ b/cursoPractFrontDev4/index.html
@@ -7,96 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&family=Roboto:ital,wght@0,900;1,100;1,500&display=swap" rel="stylesheet">
-        <title>Document</title>
-        <style>
-            :root {
-                --white: #FFFFFF;
-                --black: #000000;
-                --dark: #232830;
-                --very-light-pink: #C7C7C7;
-                --text-input-field: #F7F7F7;
-                --hospital-green: #ACD9B2;
-                --sm: 14px;
-                --md: 16px;
-                --lg: 18px;
-            }
-            body {
-                margin: 0;
-                font-family: 'Quicksand', sans-serif;
-            }
-            nav {
-                display: flex;
-                justify-content: space-between;
-                padding: 0 24px;
-                border-bottom: 1px solid var(--very-light-pink);
-            }
-            .menu {
-                display: none;
-            }
-            .logo {
-                width: 100px;
-            }
-            .navbar-left ul,
-            .navbar-right ul {
-                list-style: none;
-                padding: 0;
-                margin: 0px;
-                display: flex;
-                align-items: center;
-                height: 60px;
-            }
-            .navbar-left {
-                display: flex;
-            }
-            .navbar-left ul {
-                margin-left: 12px;
-            }
-            .navbar-left ul li a,
-            .navbar-right ul li {
-                text-decoration: none;
-                color: var(--very-light-pink);
-                border: 1px solid var(--white);
-                padding: 8px;
-                border-radius: 8px;
-            }
-            .navbar-left ul li a:hover,
-            .navbar-right ul li:hover {
-                border: 1px solid var(--hospital-green);
-                color: var(--hospital-green);
-            }
-            .navbar-email {
-                color: var(--very-light-pink);
-                font-size: var(--sm);
-                margin-right: 12px;
-            }
-            .navbar-shopping-cart {
-                position: relative;
-            }
-            .navbar-shopping-cart div {
-                width: 16px;
-                height: 16px;
-                background-color: var(--hospital-green);
-                border-radius: 50%;
-                font-size: var(--sm);
-                font-weight: bold;
-                position: absolute;
-                top: -6px;
-                right: -6px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: var(--black);
-            }
-            @media (max-width: 640px) {
-                .menu {
-                    display: block;
-                }
-                .navbar-left ul,
-                .navbar-email {
-                    display: none;
-                }    
-            }
-        </style>    
+        <title>YardSale: Tienda online de productos de calidad</title>title>
     </head>
     <body>
         <nav>
