--- a/cursoPractFrontDev4/index.html
+++ b/cursoPractFrontDev4/index.html
@@ -7,7 +7,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&family=Roboto:ital,wght@0,900;1,100;1,500&display=swap" rel="stylesheet">
-        <title>YardSale: Tienda online de productos de calidad</title>title>
+        <link rel="stylesheet" href="./styles.css">
+        <title>YardSale: Tienda online de productos de calidad</title>
     </head>
     <body>
         <nav>
@@ -33,6 +34,14 @@
                         <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
                         <div>2</div>
                     </li>
+                </ul>
+            </div>
+
+            <div class="desktop-menu">
+                <ul>
+                    <li><a href="/" class="title">My orders</a></li>
+                    <li><a href="/">My account</a></li>
+                    <li><a href="/">Sign out</a></li>
                 </ul>
             </div>
         </nav>
