Generando interactividad con el desktop menu

--- a/cursoPractFrontDev4/index.html
+++ b/cursoPractFrontDev4/index.html
@@ -37,7 +37,7 @@
                 </ul>
             </div>
 
-            <div class="desktop-menu">
+            <div class="desktop-menu inactive">
                 <ul>
                     <li><a href="/" class="title">My orders</a></li>
                     <li><a href="/">My account</a></li>
@@ -45,5 +45,6 @@
                 </ul>
             </div>
         </nav>
+        <script src="./main.js"></script>
     </body>
 </html>
