Generando interactividad en el mobile menu

--- a/cursoPractFrontDev4/index.html
+++ b/cursoPractFrontDev4/index.html
@@ -45,7 +45,7 @@
                 </ul>
             </div>
 
-            <div class="mobile-menu">
+            <div class="mobile-menu inactive">
                 <ul class="categories">
                     <li><a href="/">CATEGORIES</a></li>
                     <li><a href="/">All</a></li>
