--- a/cursoPractFrontDev4/index.html
+++ b/cursoPractFrontDev4/index.html
@@ -68,7 +68,7 @@
            </div> 
         </nav>
 
-        <aside class="product-detail inactive">
+        <aside class="product-detail-first inactive">
             <div class="title-container">
                 <img src="./icons/flechita.svg" alt="arrow">
                 <p class="title">My order</p>
@@ -118,6 +118,24 @@
                 </button>
             </div>
         </aside>
+
+        <aside class="product-detail-second">
+            <div class="product-detail-close">
+                <img src="./icons/icon_close.png" alt="close">
+            </div>
+            <img src="https://images.pexels.com/photos/819805/pexels-photo-819805.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="bike">
+            <div class="product-info">
+                <p>$35.00</p>
+                <p>Bike</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam saepe, exercitationem, doloremque itaque culpa repudiandae natus nihil vel consequuntur dolore modi dolorum! Excepturi quod porro, asperiores harum aliquid hic id.
+                </p>
+                <button class="primary-button add-to-cart-button">
+                    <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
+                    Add to cart
+                </button>
+            </div>
+        </aside>
+
         <section class="main-container">
             <div class="cards-container">
                 <!-- <div class="product-card">
