Resolviendo conflictos en la fusion de aside en estilos con clases del mismo nombre

--- a/cursoPractFrontDev4/index.html
+++ b/cursoPractFrontDev4/index.html
@@ -119,7 +119,7 @@
             </div>
         </aside>
 
-        <aside class="product-detail-second">
+        <aside class="product-detail-second inactive">
             <div class="product-detail-close">
                 <img src="./icons/icon_close.png" alt="close">
             </div>
